@@ -16,11 +16,14 @@ $modules{$_} = $_ for qw(
   FFI::C::Util
   FFI::CheckLib
   FFI::Platypus
+  FFI::Platypus::Memory
   FFI::Platypus::Type::PtrObject
   JSON::MaybeXS
   JSON::PP
   JSON::XS
+  Ref::Util
   Test2::Tools::AsyncSubtest
+  Test2::Tools::JSON::Pointer
   Test2::V0
   YAML
 );
